# fts-bff-webadmin

./: Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
.github/: FUNDING.yml
fts_webadmin_api/: errors.py
fts_webadmin_api/rest/: authentication.py  user.py
service/: main.py
service/interfaces/: authentication_ctrl.py  authentication_endpoints.py  rest_router.py  user_endpoints.py
service/models/: user.py
service/plumbing/: dependency_handler.py  settings.py
service/plumbing/db/: base_class.py  init_db.py  session.py
service/services/: authentication_service.py  instance_service.py  user_service.py
