[tool.poetry]
name = "fts-bff-webadmin"
version = "0.1.0"
description = "A BFF pattern application to integrate a web frontend for administering FreeTAKServer."
authors = ["Simon Blomsterlund <simon@alarmr.io>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "fts_webadmin_api"},
    {include = "service"}
    ]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
aioauth-fastapi = "^0.1.1"
# fastapi-manage = "^0.8.0" Not needed
fastapi-viewsets = "^0.1.5"
fastapi-openapierrors = "^0.9.0"
fastapi-jwt = "^0.1.8"
fastapi-crud = "^0.0.3"
fastapi-cachetools = "^0.1.0"
fastapi-sqla = "^2.3.6"
uvicorn = {extras = ["standard"], version = "^0.18.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
